--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<h1>Bienvenue sur ma page de présentation de mon CV</h1>
 
-		<p id="myWord">Kowing is not enough, we must apply. Willing is not enough, we must do.</p>
+		<p id="myWord">Knowing is not enough, we must apply. Willing is not enough, we must do.</p>
 
 		<div class="catchMe"><img src="Images/catchMe.png" alt="Logo showing CatchMe"></div>
 
@@ -26,8 +26,9 @@
 		<p id="skills">Je suis totalement novice...</p>
 
 		<div id="looser">
-			<p>Are you afraid to take up the challenge ?<br>You can download my resume as below :)</p>
-			<a href="../public/misc/20201110_CV.pdf" download>DOWNLOAD</a>
+			<p>Oseriez-vous vous confronter à mon jeu ?<br>Vous avez toujours le choix de visualiser en ligne ou télécharger mon CV :)</p>
+			<button id="button">Cliquez ici</button>
+			<div><a href="../public/misc/20201110_CV.pdf" download>Téléchargement</a></div>
 		</div>
 		
 		<script src="../src/js/myScript.js"></script>
